--- a/_posts/2000-01-06-tools.md
+++ b/_posts/2000-01-06-tools.md
@@ -1,6 +1,6 @@
 ---
 title: "Tools"
-bg: blue
+bg: red
 color: white
 fa-icon: plug
 ---
@@ -11,4 +11,4 @@ fa-icon: plug
 
 ### Collaborative first mentality
 
-# [Check us out of GitHub](https://github.com/DivSeek-Canada)
+# [Check us out on GitHub](https://github.com/DivSeek-Canada)
