--- a/_posts/2000-01-03-how.md
+++ b/_posts/2000-01-03-how.md
@@ -11,7 +11,7 @@ fa-icon: arrow-down
 
 ### Offers a model for the DivSeek initiative globally.
 
-Expected to **galvanize the use of genomic information by plant breeders** <br /> to <em style="font-size:1.5em">accelerate crop breeding in Canada</em>>
+Expected to **galvanize the use of genomic information by plant breeders** <br /> to <em style="font-size:1.5em">accelerate crop breeding in Canada</em>
 
 ## Either Host your data with us <br /> or Create your own portal with our tools
 
