--- a/_posts/2000-01-04-portal.md
+++ b/_posts/2000-01-04-portal.md
@@ -13,4 +13,4 @@ Currently houses
 
 for Lentil, Flax, Sunflower!
 
-## [Come Check it Out!](http://http://staging.divseekcanada.ca/)
+## [Come Check it Out!](https://staging.divseekcanada.ca/)
